Fix item expansion based on visibiltiy

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -36,7 +36,7 @@
 	> .tree-striped { min-width:100%; display:inline-block; background:url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAAkCAMAAAB/qqA+AAAABlBMVEUAAAAAAAClZ7nPAAAAAnRSTlMNAMM9s3UAAAAXSURBVHjajcEBAQAAAIKg/H/aCQZ70AUBjAATb6YPDgAAAABJRU5ErkJggg==") left top repeat; }
 	// wholerow
 	> .tree-wholerow-ul .tree-hovered,
-	> .tree-wholerow-ul .tree-selected { background:transparent; box-shadow:none; border-radius:0; }
+	> .tree-wholerow-ul .tree-selected { box-shadow:none; border-radius:0; }
 	.tree-wholerow { -moz-box-sizing:border-box; -webkit-box-sizing:border-box; box-sizing:border-box; }
 	.tree-wholerow-hovered { background:@hovered-bg-color; }
 	.tree-wholerow-clicked {  background:@clicked-bg-color;  }
